--- a/pages/index/addProject/addProject.wxml
+++ b/pages/index/addProject/addProject.wxml
@@ -3,39 +3,54 @@
 		<view>
 		  <lists class="lists" lists="{{lists}}" bind:inputValue="getInputVal"></lists>
 		</view>
-		<view>
-			<text class="title">项目时间</text>
-			<picker class="picker" mode="date" value="beginTime" bindchange="startTimedataChange">
-			    <view>
-			      <text class="text" wx:if="{{beginTime}}">{{beginTime}}</text>
-			    	<text class="text" wx:else>请选择开始时间</text>
-			    	<view class="navigator">
-					    <view class="navigator-arrow"></view>
-					</view>
-			    </view>
-	  		</picker>
-		  	<picker class="picker" mode="date" value="endTime" bindchange="endTimedataChange">
-			    <view>
-			      <text class="text" wx:if="{{endTime}}">{{endTime}}</text>
-			    	<text class="text" wx:else>请选择结束时间</text>
-			    	<view class="navigator">
-					    <view class="navigator-arrow"></view>
-					  </view>
-			    </view>
-		  	</picker>
-		</view>
-		<view style="position: relative;">
-			<text class="title">项目图片</text>
-			<view bindtap="chooseImage" class="picture">
-				<button class="icon-add"></button>
-				<text>请选择图片</text>
+		<view style="border-top: 20rpx solid #DFE0E4;overflow: hidden;display: flex">
+			<view class="leftLabel">
+				<image src=""/>
+				<text class="title">项目时间</text>
+			</view>
+			<view class="rightContent">
+				<picker class="picker" mode="date" value="beginTime" bindchange="startTimedataChange">
+				    <view>
+				      <text class="text" wx:if="{{beginTime}}">{{beginTime}}</text>
+				    	<text class="text" wx:else>请选择开始时间</text>
+				    	<view class="navigator">
+						    <view class="navigator-arrow"></view>
+						</view>
+				    </view>
+		  		</picker>
+			  	<picker class="picker" mode="date" value="endTime" bindchange="endTimedataChange">
+				    <view>
+				      <text class="text" wx:if="{{endTime}}">{{endTime}}</text>
+				    	<text class="text" wx:else>请选择结束时间</text>
+				    	<view class="navigator">
+						    <view class="navigator-arrow"></view>
+						  </view>
+				    </view>
+			  	</picker>
 			</view>
 		</view>
-		<view>
-			<text class="title">项目介绍</text>
-			<view class="discription">
-				<!--  auto-focus="true"  -->
-				<textarea name="textarea" value="{{intro}}"/>
+		<view style="border-top: 20rpx solid #DFE0E4;overflow: hidden;display: flex">
+			<view class="leftLabel">
+				<image src=""/>
+				<text class="title">项目图片</text>
+			</view>
+			<view class="rightContent">
+				<view bindtap="chooseImage" class="picture">
+					<button class="icon-add"></button>
+					<text>请选择图片</text>
+				</view>
+			</view>
+		</view>
+		<view style="border-top: 20rpx solid #DFE0E4;overflow: hidden;display: flex">
+			<view class="leftLabel">
+				<image src=""/>
+				<text class="title">项目介绍</text>
+			</view>
+			<view class="rightContent">
+				<view class="discription">
+					<!--  auto-focus="true"  -->
+					<textarea name="textarea" value="{{intro}}"/>
+				</view>
 			</view>
 		</view>
 		<view class="footer">
@@ -45,7 +60,7 @@
 			    <view class="navigator-arrow"></view>
 			  </view>
 			</view>
-			<button formType="submit" class="addNew" bindtap="addNewStage" type="primary">新增阶段</button>
+			<button formType="submit" class="addNew" bindtap="addNewStage" type="primary">+新增阶段</button>
 		</view>
 	</view>
 </form>
