--- a/pages/index/addProject/stage/stage.wxss
+++ b/pages/index/addProject/stage/stage.wxss
@@ -7,12 +7,15 @@
 	height: 92rpx;
 	border-bottom: 1rpx solid #e5e5e5;
 	line-height: 92rpx;
+	display:flex;
+	align-items:center;
 }
 .all .icon{
 	width:37rpx;
 	height: 42rpx;
 	margin-left: 30rpx;
 	margin-right: 30rpx;
+	border: 1rpx solid red;
 }
 .all  .title{
 	font-family: "PingFangSC-Medium";
@@ -40,6 +43,26 @@
 	height: 112rpx;
 }
 .wrapper .label{
+	overflow: hidden;
+	float:left;
+	display:flex;
+	justify-content:center;
+	align-items:center;
+}
+.wrapper .label image{
+	width: 45rpx;
+	height: 45rpx;
+	border: 1rpx solid red;
+}
+.wrapper .label text{
+	padding-right: 20rpx;
+	font-family: "PingFangSC-Regular";
+	color: #0f161e;
+	float: left;
+	font-size: 32rpx;
+	margin-left: 10rpx;
+}
+.wrapper .radioLabel{
 	padding-right: 20rpx;
 	font-family: "PingFangSC-Regular";
 	color: #0f161e;
@@ -78,13 +101,15 @@
 	margin-bottom: 40rpx;
 	font-size: 28rpx;
 	font-family: "PingFangSC-Regular";
-	color: #3eb85f;
-	border-radius: 12rpx;
-	border: 1rpx solid #3eb85f;
+	color: #00c6ae;
+	border-radius: 5rpx;
 	background-color: white;
 	padding: 0;
 	line-height: 60rpx;
 }
+.content .addStage::after{  
+  border:1rpx solid #00c6ae;  
+} 
 .main .navigator {
   padding: 20rpx 30rpx;
   position: relative;
