--- a/pages/user/user.wxss
+++ b/pages/user/user.wxss
@@ -1,40 +1,45 @@
+.userCenter{
+	background-color: #f1f2f6;
+}
 .userCenter .header{
-	height: 280rpx;
+	height: 475rpx;
 	/*width: 1000rpx;*/
 	background-color: #608FED;
-	/*display: flex;
+	display: flex;
 	justify-content: center;
-	align-items: center;*/
+	align-items: center;
+
 }
-.userCenter .background{
+
+/*.userCenter .background{
 	height: 79rpx;
 	border-bottom-left-radius: 100%;
 	border-bottom-right-radius: 100%;
 	background-color: #608FED;
 	margin-top: -6rpx;
 	box-shadow:0 20rpx 0 rgba(255,255,255,0.2);
-}
+}*/
 .userCenter .header image{
 	width: 184rpx;
 	height: 184rpx;
-	border: 1rpx solid black;
+	/*border: 1rpx solid black;*/
 }
 .userCenter .header .tx{
-	padding-top: 16rpx;
+	/*padding-top: 16rpx;*/
 }
-.userCenter .header .tx,.userCenter .header .content{
+/*.userCenter .header .tx,.userCenter .header .content{
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}
+}*/
 .userCenter .header .content{
-	margin-top: 30rpx;
+	/*margin-top: 30rpx;
 	font-size: 36rpx;
 	font-family: "PingFangSC";
-	color: white;
+	color: white;*/
 	/*color: */
 }
-.userCenter .header  .position{
+/*.userCenter .header  .position{
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -42,37 +47,54 @@
 	font-size: 28rpx;
 	font-family: "PingFangSC";
 	color: white;
-}
+}*/
 .userCenter .slot{
-	display: flex;
+	/*display: flex;
 	justify-content: center;
 	align-items: center;
 	text-align: center;
-	margin-bottom: 30rpx;
+	margin-bottom: 30rpx;*/
+	width: 570rpx;
+	position: absolute;
+	background-color: white;
+	height: 140rpx;
+	line-height: 140rpx;
+	margin-top: -70rpx;
+	margin-left: 90rpx;
+	margin-right: 90rpx;
+	border-radius: 10rpx;
 }
 .userCenter .slot image{
 	height: 58rpx;
+	float: left;
+	margin-top:40rpx;
+	margin-right: 10rpx;
 	/*border: 1rpx solid red;*/
 }
-.userCenter .slot .one{
-	margin-right: 160rpx;
-}
+
 .userCenter .slot .one image{
 	width: 50rpx;
 }
 .userCenter .slot .two image{
 	width: 62rpx;
 }
-.userCenter .slot .two{
-	margin-left: 160rpx;
-}
-.userCenter .slot .one,.userCenter .slot .two{
-	margin-top: 20rpx;
+.userCenter .slot .one{
+	/*margin-top: 20rpx;*/
 	font-family: "PingFangSC";
 	font-size: 28rpx;
+	float: left;
+	margin-left: 65rpx;
+}
+.userCenter .slot .two{
+	font-family: "PingFangSC";
+	font-size: 28rpx;
+	float: right;
+	margin-right: 65rpx;
 }
 .userCenter .slot .one .oneText,.userCenter .slot .two .twoText{
-	margin-top: 20rpx;
+	display:inline-block;
+	margin-top:20rpx;
+	margin-left:-90rpx;
 }
 .userCenter .slot .sx{
 	border: 1rpx solid #E5E5E5;
@@ -82,12 +104,19 @@
 .userCenter .container .lists{
 	height: 110rpx;
 	line-height: 110rpx;
-	border-top: 20rpx solid #E5E5E5;
+	/*border-top: 20rpx solid #E5E5E5;*/
+	margin-top: 20rpx;
 	width: 100%;
 	overflow: hidden;
 	display: flex;
 	/*justify-content: center;*/
 	align-items: center;
+	background-color: white;
+	margin-left: 30rpx;
+	margin-right: 30rpx
+}
+.userCenter .container .lists.first{
+	margin-top: 110rpx;
 }
 .userCenter .container .lists text{
 	font-family: "PingFangSC";
@@ -118,7 +147,7 @@
 	float: right;
 }
 .userCenter .footer{
-	background-color: #E5E5E5;
+	background-color: #f1f2f6;
 	padding-top: 60rpx;
 	padding-bottom: 60rpx;
 	/*display: flex;
